# nuregi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
api/: __init__.py  api.py
nuregi/: __init__.py  api.py  exceptions.py  scraper.py
nuregi/api/: api.py
nuregi/exceptions/: exceptions.py
nuregi/scraper/pdf/: __init__.py  pdf.py
pdfscraper/: __init__.py  csbs.py
public_course_catalog/: __init__.py  helpers.py
scraper/pdf/: exceptions.py  pdf.py
